--- a/host/Philisophical/Post-Move/2-12-18.html
+++ b/host/Philisophical/Post-Move/2-12-18.html
@@ -44,7 +44,7 @@
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./2-16-18.html'>Next</a> ]
 </div>
 
 <hr />
