--- a/host/Philisophical/Post-Move/2-16-18.html
+++ b/host/Philisophical/Post-Move/2-16-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>2-16-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./2-12-18.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./2-21-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,23 +53,56 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>2-16-18 <a name='Post-Move:2-16-18'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
+	<p>
+Created Friday 16 February 2018<br>
+Handout transcript: <a href="./Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a> referred to as (MOI)
+</p>
+
+<h4>News:</h4>
+
+<p>
 <ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
-</ul></li>
+<li>Paper proposal due before spring break
+<ul>
+<li>3 possible topics for meeting on 26th</li>
 </ul>
+</li>
+<li>Test due a week from monday</li>
+</ul>
+</p>
+
+<h4>Notes:</h4>
+
+<p>
+<ol type="1" start="1">
+<li>On (MOI)C&amp;D:
+<ol type="a" start="1">
+<li><b>Temptation:</b> Desire for something as evil
+<ol type="1" start="1">
+<li><b>Alt</b>: As desire for something that it would be wrong to pursue in the circumstances</li>
+<li>eg: Christ would know the bread as a good, and desire it in that respect</li>
+</ol>
+</li>
+<li>Actual attraction to immoral acts require action of the will, however all of Christ's temptation were simply passions.</li>
+<li>A reply:
+<ol type="a" start="1">
+<li>Fullness of virtue requires absence of internal conflict.</li>
+<li>Christ has fullness of virtue</li>
+<li>Christ has internal conflict.</li>
+<li>=&gt; Christ either does not have internal conflict or does not have fullness of virtue.</li>
+</ol>
+</li>
+<li>Response:
+<ol type="a" start="1">
+<li>Fullness of virtue requires control of the passions, not an absense of conflict.</li>
+</ol></li>
+</ol></li>
+</ol>
+</p>
 
 	</div>
 
