--- a/host/Philisophical/Post-Move/2-26-18.html
+++ b/host/Philisophical/Post-Move/2-26-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>2-26-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./2-23-18.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Martins_Objections_to_the_Incarnation.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,23 +53,27 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>2-26-18 <a name='Post-Move:2-26-18'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
-<ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
-</ul></li>
-</ul>
+	<p>
+Created Monday 26 February 2018
+</p>
+
+<h4>Notes</h4>
+
+<p>
+<ol type="1" start="1">
+<li>"Forward and backward" looking problem.</li>
+<li>Orders of the will:
+<ol type="a" start="1">
+<li>First: what you directly will (ice cream) (could be good, maybe not)</li>
+<li>Second: what you will to will (salad) (properly good)</li>
+<li>These can (and often do) conflict.</li>
+</ol></li>
+</ol>
+</p>
 
 	</div>
 
