--- a/host/Philisophical/Post-Move/Martins_Objections_to_the_Incarnation.html
+++ b/host/Philisophical/Post-Move/Martins_Objections_to_the_Incarnation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>Martins Objections to the Incarnation</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./2-26-18.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Paper_topics.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,29 +53,102 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>Martins Objections to the Incarnation <a name='Post-Move:Martins Objections to the Incarnation'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
-<ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
-</ul></li>
-</ul>
+	<p>
+Created Friday 16 February 2018
+</p>
+
+<p>
+<b>Martin's Objectiosn Summarized</b>
+</p>
+
+<p>
+<ol type="A" start="1">
+<li><i>Contradictory Attributes:</i>
+<ol type="1" start="1">
+<li>Attributes of a person's mind(s) are predicated of the person who bears the mind(s).</li>
+<li>On Christian doctrine, in virtue of His divine mind, Christ is omniscient.</li>
+<li>Therefore, the person Christ is both omniscient and not omniscient.</li>
+<li>Nothing can be both F and not-F, where F is some feature of attribute.</li>
+<li>Therefore, Christian doctrine concerning the Incarnation is false.</li>
+</ol>
+</li>
+<li><i>Two Minds:</i>
+<ol type="1" start="1">
+<li>Anything with two minds has two independent centers of rational agency.</li>
+<li>No single person has two independent centers of rational agency.</li>
+<li>Therefore, no single person can have two minds.</li>
+<li>On Christian doctrine, Christ is one person with two minds.</li>
+<li>Therefore, Christian doctrine about Christ is false.</li>
+</ol>
+</li>
+<li><i>Christ's Temptation:</i>
+<ol type="1" start="1">
+<li>S is tempted to sin only if S is attracted to doing something immoral.</li>
+<li>A morally perfect being could not be attracted to doing something immoral.</li>
+<li>On Christian doctrine, Christ is both a morally perfect being and was tempted to sin</li>
+<li>Therefore, Christian doctrine is false.</li>
+</ol>
+</li>
+<li><i>Christ as Model:</i>
+<ol type="1" start="1">
+<li>S is a moral model for human beings only if S at some time is attracted to doing something immoral.</li>
+<li>Christ cannot be attracted to doing anything immoral.</li>
+<li>Therefore, Christ is not a moral model for human beings.</li>
+</ol>
+</li>
+<li><i>Christ's Praiseworthiness:</i>
+<ol type="1" start="1">
+<li>S's lack of attraction to a sinful act is praiseworthy only if S at some time felt an attraction to that sinful act and overcame it by conscious effort.</li>
+<li>Christ never felt attraction to any sinful act.</li>
+<li>Therefore, Christ's lack of attraction to sinful acts is not praiseworthy.</li>
+</ol>
+</li>
+<li><i>Against the Reasonableness of Christian Belief:</i>
+<ol type="1" start="1">
+<li>Christian belief relies on Spirit Epistemology.</li>
+<li>Any belief that relies on Spirit Epistemology is not reasonable.
+<ol type="a" start="1">
+<li>Any belief that relies on Spirit Epistemology has the same epistemic status as the beliefs of followers of Apollonius, who have an Apollonius Epistemology (=those whose impediments have been removed by God can see that Apollonius is God incarnate).</li>
+<li>The beliefs of followers of Apollonius are not reasonable.</li>
+</ol>
+</li>
+<li>Christian belief is not reasonable</li>
+</ol>
+</li>
+<li><i>Evidence for the Incarnation:</i>
+<ol type="1" start="1">
+<li>Miracles do not rationally support the belief that Jesus is the Son of God.
+<ol type="a" start="1">
+<li>Miracles can be worked by persons who are not the Son of God.</li>
+<li>There is not enough justification to believe that Jesus worked miracles.</li>
+</ol>
+</li>
+<li>Jesus' moral example does not rationally support the belief taht Jesus is the Son of God.
+<ol type="a" start="1">
+<li>Moral perfection is possible for persons other than the Son of God.</li>
+<li>Jesus was not an ideal moral example.</li>
+</ol>
+</li>
+<li>Belief in the Incarnation can be rationally supported only by Jesus' miracles and moral example.</li>
+<li>Therefore, belief in the Incarnation is not rationally supported.</li>
+</ol></li>
+</ol>
+</p>
 
 	</div>
 
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='./2-16-18.html'>Post-Move:2-16-18</a>
+
+		<br /><br />
 
 	</div>
 
