--- a/host/Philisophical/Post-Move/2-21-18.html
+++ b/host/Philisophical/Post-Move/2-21-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>2-21-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./2-16-18.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./2-23-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,23 +53,77 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>2-21-18 <a name='Post-Move:2-21-18'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
+	<p>
+Created Wednesday 21 February 2018
+</p>
+
+<h4>News:</h4>
+
+<p>
 <ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
+<li>Incarnation test due Monday before the end of the day.</li>
+<li>Paper proposal due Wednesday March 7th
+<ul>
+<li>(2 weeks from today)</li>
 </ul></li>
 </ul>
+</p>
+
+<h4>Notes:</h4>
+
+<p>
+<ol type="1" start="1">
+<li>Christ is both passible and impissible
+<ol type="a" start="1">
+<li><b>passible:</b> causally effected by something</li>
+<li>passible in his human nature</li>
+<li>impassible in his divine nature</li>
+</ol>
+</li>
+<li>argument:
+<ol type="a" start="1">
+<li>Something which is divine is impassable.</li>
+<li>Anything human is passible.</li>
+<li>Nothing can be both passable and impassible</li>
+<li>Christ is both divine and human.</li>
+<li>Christ is both passible and impassible</li>
+<li>c and e cannot both be true.</li>
+</ol>
+</li>
+<li>Reply:
+<ol type="a" start="1">
+<li>Assertion(A):
+<ol type="1" start="1">
+<li>Qua human, Christ is passible</li>
+<li>Qua divine, Christ is impassible</li>
+</ol>
+</li>
+<li>Subject (S):
+<ol type="1" start="1">
+<li>Christ qua human is passible</li>
+<li>Christ qua divine is impassible</li>
+</ol>
+</li>
+<li>Predicate (P):
+<ol type="1" start="1">
+<li>Christ is passible qua human</li>
+<li>Christ is impassible qua divine</li>
+</ol>
+</li>
+<li>Copula (C):
+<ol type="1" start="1">
+<li>Christ is qua human passible</li>
+<li>Christ is qua divine impassible</li>
+</ol></li>
+</ol>
+</li>
+<li>h</li>
+</ol>
+</p>
 
 	</div>
 
