--- a/host/Philisophical/Post-Move/2-23-18.html
+++ b/host/Philisophical/Post-Move/2-23-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>2-23-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./2-21-18.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./2-26-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,23 +53,79 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>2-23-18 <a name='Post-Move:2-23-18'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
-<ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
-</ul></li>
-</ul>
+	<p>
+Created Friday 23 February 2018
+</p>
+
+<h4>Notes:</h4>
+
+<p>
+<ol type="1" start="1">
+<li>How to handle passibility and impassibility of Christ?
+<ol type="a" start="1">
+<li>Can't be at different times, since something impassible can never change.</li>
+<li>Passible and impassible in different ways?
+<ol type="1" start="1">
+<li>A (doesn't work, nothing is different)
+<ol type="a" start="1">
+<li>Qua human, Christ is passible.</li>
+<li>Qua divine, Christ is impassible.</li>
+</ol>
+</li>
+<li>S (doesn't work, subject must be the same)
+<ol type="a" start="1">
+<li>Christ-qua-human is passible.</li>
+<li>Christ-qua-divine is impassible.</li>
+</ol>
+</li>
+<li>P (does work, makes the distinction based upon natures)
+<ol type="a" start="1">
+<li>Christ is passible-qua-human.
+<ol type="1" start="1">
+<li>actual opposite would be non-passible-qua-human</li>
+</ol>
+</li>
+<li>Christ is impassible-qua-divine.
+<ol type="1" start="1">
+<li>actual opposite would be non-impassible-qua-divine</li>
+</ol></li>
+</ol>
+</li>
+<li>C (???)
+<ol type="a" start="1">
+<li>Christ is-qua-human passible.</li>
+<li>Christ is-qua-divine impassible.</li>
+</ol></li>
+</ol></li>
+</ol>
+</li>
+<li>Worries with 1b3:
+<ol type="a" start="1">
+<li>ad hoc: it was only made to solve the problem of impassibility/passibility of Christ
+<ol type="1" start="1">
+<li>R: this is just a matter of categorization, so there is nothing ad hoc about it.</li>
+</ol>
+</li>
+<li>bilocation/multiple incarnation issue:
+<ol type="1" start="1">
+<li>R: make it more specific (author disagrees)</li>
+<li>(paper topic)</li>
+</ol></li>
+</ol>
+</li>
+<li>A new approach by the author:
+<ol type="a" start="1">
+<li><b>Passibility: </b>have <i>a nature</i> that is causally affectable.</li>
+<li><b>Impassibility: </b>have <i>a nature</i> that is not causally affectable.</li>
+<li>This fulfills the requirements for passibility normally, each thing normally only has one nature and thus can only be one or the other, yet Christ, having more than one, is able to have both.</li>
+</ol></li>
+</ol>
+</p>
+
 
 	</div>
 
