--- a/host/Philisophical/Post-Move/Paper_topics.html
+++ b/host/Philisophical/Post-Move/Paper_topics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Index of Philosophical Theology</title>
+	<title>Paper topics</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,9 +40,9 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./Martins_Objections_to_the_Incarnation.html'>Prev</a> ]
 
-	[ <a href='#index'>Index</a> ]
+	[ <a href='../index.html'>Index</a> ]
 
 	[ <span class='insen'>Next</span> ]
 </div>
@@ -53,23 +53,26 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Index of Philosophical Theology <a name='index'></a></h1>
+	<h1>Paper topics <a name='Post-Move:Paper topics'></a></h1>
 	</div>
 
 	<div class='content'>
-	<ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
-<ul>
-<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
-<li><a href="./Post-Move/2-16-18.html" title="2-16-18" class="page">2-16-18</a></li>
-<li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
-<li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
-<li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
-<li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
-<li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
-</ul></li>
-</ul>
+	<p>
+Created Friday 23 February 2018
+</p>
+
+<p>
+<ol type="1" start="1">
+<li>(2-23-18) Answer the multiple incarnation objection to predication.
+<ol type="a" start="1">
+<li>Buildup to the issue at hand</li>
+<li>Answer using my method (Humans aren't necessarily sitting/not, numerical difference)</li>
+<li>conclusion</li>
+</ol>
+</li>
+<li>d</li>
+</ol>
+</p>
 
 	</div>
 
