--- a/host/Philisophical/Post-Move/2-26-18.html
+++ b/host/Philisophical/Post-Move/2-26-18.html
@@ -44,7 +44,7 @@
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Martins_Objections_to_the_Incarnation.html'>Next</a> ]
+	[ <a href='./2-28-18.html'>Next</a> ]
 </div>
 
 <hr />
