--- a/host/Philisophical/Post-Move/3-21-18.html
+++ b/host/Philisophical/Post-Move/3-21-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Martins Objections to the Incarnation</title>
+	<title>3-21-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./3-21-18.html'>Prev</a> ]
+	[ <a href='./3-19-18.html'>Prev</a> ]
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Paper_topics.html'>Next</a> ]
+	[ <a href='./Martins_Objections_to_the_Incarnation.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,88 +53,96 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Martins Objections to the Incarnation <a name='Post-Move:Martins Objections to the Incarnation'></a></h1>
+	<h1>3-21-18 <a name='Post-Move:3-21-18'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Friday 16 February 2018
+Created Wednesday 21 March 2018
 </p>
 
 <p>
-<b>Martin's Objectiosn Summarized</b>
-</p>
-
-<p>
-<ol type="A" start="1">
-<li><i>Contradictory Attributes:</i>
+Reading:<br>
 <ol type="1" start="1">
-<li>Attributes of a person's mind(s) are predicated of the person who bears the mind(s).</li>
-<li>On Christian doctrine, in virtue of His divine mind, Christ is omniscient.</li>
-<li>Therefore, the person Christ is both omniscient and not omniscient.</li>
-<li>Nothing can be both F and not-F, where F is some feature of attribute.</li>
-<li>Therefore, Christian doctrine concerning the Incarnation is false.</li>
-</ol>
-</li>
-<li><i>Two Minds:</i>
-<ol type="1" start="1">
-<li>Anything with two minds has two independent centers of rational agency.</li>
-<li>No single person has two independent centers of rational agency.</li>
-<li>Therefore, no single person can have two minds.</li>
-<li>On Christian doctrine, Christ is one person with two minds.</li>
-<li>Therefore, Christian doctrine about Christ is false.</li>
-</ol>
-</li>
-<li><i>Christ's Temptation:</i>
-<ol type="1" start="1">
-<li>S is tempted to sin only if S is attracted to doing something immoral.</li>
-<li>A morally perfect being could not be attracted to doing something immoral.</li>
-<li>On Christian doctrine, Christ is both a morally perfect being and was tempted to sin</li>
-<li>Therefore, Christian doctrine is false.</li>
-</ol>
-</li>
-<li><i>Christ as Model:</i>
-<ol type="1" start="1">
-<li>S is a moral model for human beings only if S at some time is attracted to doing something immoral.</li>
-<li>Christ cannot be attracted to doing anything immoral.</li>
-<li>Therefore, Christ is not a moral model for human beings.</li>
-</ol>
-</li>
-<li><i>Christ's Praiseworthiness:</i>
-<ol type="1" start="1">
-<li>S's lack of attraction to a sinful act is praiseworthy only if S at some time felt an attraction to that sinful act and overcame it by conscious effort.</li>
-<li>Christ never felt attraction to any sinful act.</li>
-<li>Therefore, Christ's lack of attraction to sinful acts is not praiseworthy.</li>
-</ol>
-</li>
-<li><i>Against the Reasonableness of Christian Belief:</i>
-<ol type="1" start="1">
-<li>Christian belief relies on Spirit Epistemology.</li>
-<li>Any belief that relies on Spirit Epistemology is not reasonable.
+<li>God permits his beloved to suffer
 <ol type="a" start="1">
-<li>Any belief that relies on Spirit Epistemology has the same epistemic status as the beliefs of followers of Apollonius, who have an Apollonius Epistemology (=those whose impediments have been removed by God can see that Apollonius is God incarnate).</li>
-<li>The beliefs of followers of Apollonius are not reasonable.</li>
+<li>As suffering increases, it increases our openness to God</li>
 </ol>
 </li>
-<li>Christian belief is not reasonable</li>
-</ol>
-</li>
-<li><i>Evidence for the Incarnation:</i>
+<li>Types of Thriving:
+<ol type="a" start="1">
+<li>Bodily: health of body</li>
+<li>Mental: health of the mind</li>
+<li>Personal: health of the whole, despite health of the body or mind. (glorious or couragousness, general outstandingness as a person)
 <ol type="1" start="1">
-<li>Miracles do not rationally support the belief that Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Miracles can be worked by persons who are not the Son of God.</li>
-<li>There is not enough justification to believe that Jesus worked miracles.</li>
+<li>What humans are ACTUALLY fulfilled in</li>
+</ol></li>
 </ol>
 </li>
-<li>Jesus' moral example does not rationally support the belief taht Jesus is the Son of God.
+<li>Suffering aids and enhances personal thriving
 <ol type="a" start="1">
-<li>Moral perfection is possible for persons other than the Son of God.</li>
-<li>Jesus was not an ideal moral example.</li>
+<li>Suffering in a certain way sensitizes one to those who suffer in a similar or the same way</li>
+<li>Teaches us that we cannot satisfy ourselves
+<ol type="1" start="1">
+<li>Teaches humility in relation to others and God</li>
 </ol>
 </li>
-<li>Belief in the Incarnation can be rationally supported only by Jesus' miracles and moral example.</li>
-<li>Therefore, belief in the Incarnation is not rationally supported.</li>
+<li>Disposes us to a cycle of grace
+<ol type="1" start="1">
+<li>More suffering</li>
+<li>More openness to God</li>
+<li>More grace</li>
+<li>More capacity to suffer.</li>
+<li>goto 1</li>
+</ol>
+</li>
+<li>Provides the context and conditions for glory</li>
+<li>Christ's own suffering aids those who suffer
+<ol type="1" start="1">
+<li>When we suffer, we are in Christ (in the mind reading way)</li>
+<li>When we offer ourselves to God, Christ is in us</li>
+<li>The sufferer is honored by Christ in the union with Christ's suffering</li>
+<li>Recieves both flourishing and our hearts desires
+<ol type="a" start="1">
+<li>Since we recieve our flourishing (union with God) and our deepest hearts desire (union with God)</li>
+</ol></li>
+</ol></li>
+</ol>
+</li>
+<li>Shame 
+<ol type="a" start="1">
+<li><b>Rehearsal of the whole view!!</b></li>
+<li>4 different sources/kinds of shame
+<ol type="1" start="1">
+<li>from ones own wrongdoing: lying, murdering, cheating</li>
+<li>from others wrongdoing to you: being a victim of rape</li>
+<li>from defects of nature: elephant man</li>
+<li>from ones membership in the human race: genocides, hitler, stalin, environment</li>
+</ol>
+</li>
+<li>Each type needs to be dealt with somehow with atonement</li>
+<li>Heaven alone cannot solve the problem of shame
+<ol type="1" start="1">
+<li>Even if it is absolutely good, you can still feel shame due to your past.</li>
+<li>Remedy for shame has to be defeat</li>
+<li><b>Defeat</b>: (conditions for defeat of suffering)
+<ol type="a" start="1">
+<li>A good is recieved by the shamed person that is greater than the good lost through the shame. </li>
+<li>The shame somehow brings about the greater good.</li>
+<li>The shame is necessary (inextricably woven into) the greater good.</li>
+<li>(outcome): 
+<ol type="1" start="1">
+<li>the sufferer would ultimately choose the shame over again.</li>
+<li>ultimately glad for the shame in the end.</li>
+</ol></li>
+</ol></li>
+</ol>
+</li>
+<li>Personal thriving (luminous life of courage and suffering) itself does not defeat the shame
+<ol type="1" start="1">
+<li>Those things were not necessary</li>
+<li>Personal thriving by itself does not defeat shame, something else must.</li>
+</ol></li>
 </ol></li>
 </ol>
 </p>
@@ -144,11 +152,6 @@ Created Friday 16 February 2018
 	<br />
 
 	<div class='page-footer'>
-		<b>Backlinks:</b>
-
-		<a href='./2-16-18.html'>Post-Move:2-16-18</a>
-
-		<br /><br />
 
 	</div>
 
