--- a/host/Philisophical/Post-Move/3-7-18.html
+++ b/host/Philisophical/Post-Move/3-7-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Martins Objections to the Incarnation</title>
+	<title>3-7-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./3-21-18.html'>Prev</a> ]
+	[ <a href='./3-5-18.html'>Prev</a> ]
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Paper_topics.html'>Next</a> ]
+	[ <a href='./3-12-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,90 +53,70 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Martins Objections to the Incarnation <a name='Post-Move:Martins Objections to the Incarnation'></a></h1>
+	<h1>3-7-18 <a name='Post-Move:3-7-18'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Friday 16 February 2018
+Created Wednesday 07 March 2018
 </p>
 
 <p>
-<b>Martin's Objectiosn Summarized</b>
-</p>
-
-<p>
-<ol type="A" start="1">
-<li><i>Contradictory Attributes:</i>
 <ol type="1" start="1">
-<li>Attributes of a person's mind(s) are predicated of the person who bears the mind(s).</li>
-<li>On Christian doctrine, in virtue of His divine mind, Christ is omniscient.</li>
-<li>Therefore, the person Christ is both omniscient and not omniscient.</li>
-<li>Nothing can be both F and not-F, where F is some feature of attribute.</li>
-<li>Therefore, Christian doctrine concerning the Incarnation is false.</li>
-</ol>
-</li>
-<li><i>Two Minds:</i>
-<ol type="1" start="1">
-<li>Anything with two minds has two independent centers of rational agency.</li>
-<li>No single person has two independent centers of rational agency.</li>
-<li>Therefore, no single person can have two minds.</li>
-<li>On Christian doctrine, Christ is one person with two minds.</li>
-<li>Therefore, Christian doctrine about Christ is false.</li>
-</ol>
-</li>
-<li><i>Christ's Temptation:</i>
-<ol type="1" start="1">
-<li>S is tempted to sin only if S is attracted to doing something immoral.</li>
-<li>A morally perfect being could not be attracted to doing something immoral.</li>
-<li>On Christian doctrine, Christ is both a morally perfect being and was tempted to sin</li>
-<li>Therefore, Christian doctrine is false.</li>
-</ol>
-</li>
-<li><i>Christ as Model:</i>
-<ol type="1" start="1">
-<li>S is a moral model for human beings only if S at some time is attracted to doing something immoral.</li>
-<li>Christ cannot be attracted to doing anything immoral.</li>
-<li>Therefore, Christ is not a moral model for human beings.</li>
-</ol>
-</li>
-<li><i>Christ's Praiseworthiness:</i>
-<ol type="1" start="1">
-<li>S's lack of attraction to a sinful act is praiseworthy only if S at some time felt an attraction to that sinful act and overcame it by conscious effort.</li>
-<li>Christ never felt attraction to any sinful act.</li>
-<li>Therefore, Christ's lack of attraction to sinful acts is not praiseworthy.</li>
-</ol>
-</li>
-<li><i>Against the Reasonableness of Christian Belief:</i>
-<ol type="1" start="1">
-<li>Christian belief relies on Spirit Epistemology.</li>
-<li>Any belief that relies on Spirit Epistemology is not reasonable.
+<li>Anselmian view: Forgiveness requires contrition on the part of the wrongdoer.
 <ol type="a" start="1">
-<li>Any belief that relies on Spirit Epistemology has the same epistemic status as the beliefs of followers of Apollonius, who have an Apollonius Epistemology (=those whose impediments have been removed by God can see that Apollonius is God incarnate).</li>
-<li>The beliefs of followers of Apollonius are not reasonable.</li>
+<li>Forgiveness and reconciliation are the same thing</li>
 </ol>
 </li>
-<li>Christian belief is not reasonable</li>
-</ol>
-</li>
-<li><i>Evidence for the Incarnation:</i>
+<li>Aquinas view (by Stump): Forgiveness only requires the action of the wronged
+<ol type="a" start="1">
+<li>Forgiveness is the wronged forswearing resentment</li>
+<li>Reconciliation requires reparation between the wronged and the wrongdoer</li>
+<li>Love and forgiveness are logically equivalent.
 <ol type="1" start="1">
-<li>Miracles do not rationally support the belief that Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Miracles can be worked by persons who are not the Son of God.</li>
-<li>There is not enough justification to believe that Jesus worked miracles.</li>
+<li>If you don't forgive someone you don't love them.</li>
+<li>If you forgive someone you love them.</li>
+<li>If you love someone then you forgave them.</li>
 </ol>
 </li>
-<li>Jesus' moral example does not rationally support the belief taht Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Moral perfection is possible for persons other than the Son of God.</li>
-<li>Jesus was not an ideal moral example.</li>
+<li>Aquinas argues that love is obligatory, in the sense that, for any person the absence of love is morally blameworthy, and the presence of love is necessary for moral good or excellence.</li>
+<li>Given the connection between love and forgiveness above, forgiveness is also obligatory.
+<ol type="1" start="1">
+<li>Even though this is true, the wrongdoer has no right to this forgiveness.</li>
+<li>Rather, the wronged is subject to moral censure due to the lack of love in particular.</li>
 </ol>
 </li>
-<li>Belief in the Incarnation can be rationally supported only by Jesus' miracles and moral example.</li>
-<li>Therefore, belief in the Incarnation is not rationally supported.</li>
+<li>The wronged has no right to demand reparation by this account, the wronged should give penance or reparation if asked that contributes to the greater good of the wrongdoer.</li>
+</ol>
+</li>
+<li>Objection to Aquinas view by Stump from Aquinas:
+<ol type="a" start="1">
+<li><a href="http://www.newadvent.org/summa/4086.htm#article2" title="Whether sin can be pardoned without Penance" class="http">Whether sin can be pardoned without Penance</a></li>
+<li>Objection 3: 
+<ol type="1" start="1">
+<li>Further, God's mercy is greater than man's. Now man sometimes forgives another for offending him, without his repenting: wherefore our Lord commanded us (Matthew 5:44): "Love your enemies, do good to them that hate you." Much more, therefore, does God pardon men for offending him, without their repenting.</li>
+<li>God's mercy is more powerful than man's, in that it moves man's will to repent, which man's mercy cannot do. </li>
+</ol>
+</li>
+<li>There is a difference between the grace of god and grace of man.
+<ol type="1" start="1">
+<li>God's grace is productive of goodness, man's is not.</li>
+<li>So, when you are in another man's good graces it will not bring any good in you *metaphysically*</li>
+<li>Grace from God perfects the good in us</li>
+</ol>
+</li>
+<li>So, due to this a man can forgive another, without changing the will of the wrongdoer.</li>
+<li>However it is impossible that God pardon a man without his will being changed.
+<ol type="1" start="1">
+<li>If we were to accept God's love, we would be changed to be repentant</li>
+<li>If we were to block this love, we would also lose the forgiveness</li>
+</ol></li>
 </ol></li>
 </ol>
+</p>
+
+<p>
+God's own forgiveness seems less powerful than mine given the nature that Aquinas attributes to it in the article. The grace of God causes good in the person, and this grace is the love (and therefore forgiveness) of God in the person. 
 </p>
 
 	</div>
@@ -144,11 +124,6 @@ Created Friday 16 February 2018
 	<br />
 
 	<div class='page-footer'>
-		<b>Backlinks:</b>
-
-		<a href='./2-16-18.html'>Post-Move:2-16-18</a>
-
-		<br /><br />
 
 	</div>
 
