--- a/host/Philisophical/index.html
+++ b/host/Philisophical/index.html
@@ -66,6 +66,15 @@
 <li><a href="./Post-Move/2-21-18.html" title="2-21-18" class="page">2-21-18</a></li>
 <li><a href="./Post-Move/2-23-18.html" title="2-23-18" class="page">2-23-18</a></li>
 <li><a href="./Post-Move/2-26-18.html" title="2-26-18" class="page">2-26-18</a></li>
+<li><a href="./Post-Move/2-28-18.html" title="2-28-18" class="page">2-28-18</a></li>
+<li><a href="./Post-Move/3-2-18.html" title="3-2-18" class="page">3-2-18</a></li>
+<li><a href="./Post-Move/3-5-18.html" title="3-5-18" class="page">3-5-18</a></li>
+<li><a href="./Post-Move/3-7-18.html" title="3-7-18" class="page">3-7-18</a></li>
+<li><a href="./Post-Move/3-12-18.html" title="3-12-18" class="page">3-12-18</a></li>
+<li><a href="./Post-Move/3-14-18.html" title="3-14-18" class="page">3-14-18</a></li>
+<li><a href="./Post-Move/3-16-18.html" title="3-16-18" class="page">3-16-18</a></li>
+<li><a href="./Post-Move/3-19-18.html" title="3-19-18" class="page">3-19-18</a></li>
+<li><a href="./Post-Move/3-21-18.html" title="3-21-18" class="page">3-21-18</a></li>
 <li><a href="./Post-Move/Martins_Objections_to_the_Incarnation.html" title="Martins Objections to the Incarnation" class="page">Martins Objections to the Incarnation</a></li>
 <li><a href="./Post-Move/Paper_topics.html" title="Paper topics" class="page">Paper topics</a></li>
 </ul></li>
