--- a/host/Philisophical/Post-Move/3-12-18.html
+++ b/host/Philisophical/Post-Move/3-12-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Martins Objections to the Incarnation</title>
+	<title>3-12-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./3-21-18.html'>Prev</a> ]
+	[ <a href='./3-7-18.html'>Prev</a> ]
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Paper_topics.html'>Next</a> ]
+	[ <a href='./3-14-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,88 +53,81 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Martins Objections to the Incarnation <a name='Post-Move:Martins Objections to the Incarnation'></a></h1>
+	<h1>3-12-18 <a name='Post-Move:3-12-18'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Friday 16 February 2018
+Created Monday 12 March 2018
 </p>
 
 <p>
-<b>Martin's Objectiosn Summarized</b>
-</p>
-
-<p>
-<ol type="A" start="1">
-<li><i>Contradictory Attributes:</i>
+<b>Reading: </b>Atonement by Stump; Ch 4 (<a href="https://drive.google.com/open?id=1C4ikmJMxh3KuSX2o97uGKrmkiEYDlZjd" title="Drive" class="https">Drive</a>)<br>
 <ol type="1" start="1">
-<li>Attributes of a person's mind(s) are predicated of the person who bears the mind(s).</li>
-<li>On Christian doctrine, in virtue of His divine mind, Christ is omniscient.</li>
-<li>Therefore, the person Christ is both omniscient and not omniscient.</li>
-<li>Nothing can be both F and not-F, where F is some feature of attribute.</li>
-<li>Therefore, Christian doctrine concerning the Incarnation is false.</li>
-</ol>
-</li>
-<li><i>Two Minds:</i>
-<ol type="1" start="1">
-<li>Anything with two minds has two independent centers of rational agency.</li>
-<li>No single person has two independent centers of rational agency.</li>
-<li>Therefore, no single person can have two minds.</li>
-<li>On Christian doctrine, Christ is one person with two minds.</li>
-<li>Therefore, Christian doctrine about Christ is false.</li>
-</ol>
-</li>
-<li><i>Christ's Temptation:</i>
-<ol type="1" start="1">
-<li>S is tempted to sin only if S is attracted to doing something immoral.</li>
-<li>A morally perfect being could not be attracted to doing something immoral.</li>
-<li>On Christian doctrine, Christ is both a morally perfect being and was tempted to sin</li>
-<li>Therefore, Christian doctrine is false.</li>
-</ol>
-</li>
-<li><i>Christ as Model:</i>
-<ol type="1" start="1">
-<li>S is a moral model for human beings only if S at some time is attracted to doing something immoral.</li>
-<li>Christ cannot be attracted to doing anything immoral.</li>
-<li>Therefore, Christ is not a moral model for human beings.</li>
-</ol>
-</li>
-<li><i>Christ's Praiseworthiness:</i>
-<ol type="1" start="1">
-<li>S's lack of attraction to a sinful act is praiseworthy only if S at some time felt an attraction to that sinful act and overcame it by conscious effort.</li>
-<li>Christ never felt attraction to any sinful act.</li>
-<li>Therefore, Christ's lack of attraction to sinful acts is not praiseworthy.</li>
-</ol>
-</li>
-<li><i>Against the Reasonableness of Christian Belief:</i>
-<ol type="1" start="1">
-<li>Christian belief relies on Spirit Epistemology.</li>
-<li>Any belief that relies on Spirit Epistemology is not reasonable.
+<li>The indwelling of the HS is not causal or cognitive access.
 <ol type="a" start="1">
-<li>Any belief that relies on Spirit Epistemology has the same epistemic status as the beliefs of followers of Apollonius, who have an Apollonius Epistemology (=those whose impediments have been removed by God can see that Apollonius is God incarnate).</li>
-<li>The beliefs of followers of Apollonius are not reasonable.</li>
-</ol>
-</li>
-<li>Christian belief is not reasonable</li>
-</ol>
-</li>
-<li><i>Evidence for the Incarnation:</i>
+<li>Omnipresence vs omniscience
 <ol type="1" start="1">
-<li>Miracles do not rationally support the belief that Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Miracles can be worked by persons who are not the Son of God.</li>
-<li>There is not enough justification to believe that Jesus worked miracles.</li>
+<li><b>Omniscience</b>: God knows all things (in this sense he is present in our minds, since he knows our thoughts)</li>
+<li><b>Omnipresence</b>: God is present causally everywhere</li>
+</ol></li>
 </ol>
 </li>
-<li>Jesus' moral example does not rationally support the belief taht Jesus is the Son of God.
+<li><b>Mind Reading</b>: for Stump this is essentially an empathetic reaction where you intuitively experience/know emotional states desires or experiences of others.
 <ol type="a" start="1">
-<li>Moral perfection is possible for persons other than the Son of God.</li>
-<li>Jesus was not an ideal moral example.</li>
+<li>Feelings are material, and therefore the DN cannot have feelings</li>
+<li>Since mind reading is a reading of feelings, it is a function of material things</li>
+<li>Therefore it is through the HN of Christ that he is able to mind read</li>
 </ol>
 </li>
-<li>Belief in the Incarnation can be rationally supported only by Jesus' miracles and moral example.</li>
-<li>Therefore, belief in the Incarnation is not rationally supported.</li>
+<li>Significant Personal Presence:
+<ol type="a" start="1">
+<li>Mutual closeness:
+<ol type="1" start="1">
+<li>Not always a symmetric relation
+<ol type="a" start="1">
+<li>(Jill is close to Jack) does not seem to imply (Jack is close to Jill)</li>
+</ol>
+</li>
+<li>Intransitive
+<ol type="a" start="1">
+<li><b>Transitive</b>: If A is related to B and B is related to C then A is related to C</li>
+<li>If a mother is close to her son, and her son is close to his wife, it need not be the case that the mother is close to her son's wife.</li>
+</ol>
+</li>
+<li>A is close to B when:
+<ol type="a" start="1">
+<li>B is sharing their deepest thoughts and desires to A</li>
+<li>A would then be dear to B, but B would not necessarily be close to A</li>
+</ol></li>
+</ol>
+</li>
+<li>Shared attention
+<ol type="1" start="1">
+<li>Eye gaze
+<ol type="a" start="1">
+<li>Provides mutual awareness of shared attention</li>
+</ol>
+</li>
+<li>If a human finds shared attention difficult (or uncomfortable)
+<ol type="a" start="1">
+<li>Language is affected</li>
+<li>Less ability for mind reading / emotional resonance</li>
+</ol>
+</li>
+<li>Joint attention is second person
+<ol type="a" start="1">
+<li>Having joint attention/shared attention is when the word "you" is used</li>
+</ol>
+</li>
+<li>Significant personal presence occurs when each of the people have shared attention to eachother</li>
+<li>Distance impedes shared attention and thus significant personal presence</li>
+<li>God can share this both because of the knowledge of his DN and because of his HN in Christ
+<ol type="a" start="1">
+<li>In the HS indwelling, God himself is supposed somehow to be within each person in grace</li>
+<li>This indwelling is ontologically higher than shared attention/mutual closeness.</li>
+</ol></li>
+</ol></li>
 </ol></li>
 </ol>
 </p>
@@ -144,11 +137,6 @@ Created Friday 16 February 2018
 	<br />
 
 	<div class='page-footer'>
-		<b>Backlinks:</b>
-
-		<a href='./2-16-18.html'>Post-Move:2-16-18</a>
-
-		<br /><br />
 
 	</div>
 
