--- a/host/Philisophical/Post-Move/3-14-18.html
+++ b/host/Philisophical/Post-Move/3-14-18.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Martins Objections to the Incarnation</title>
+	<title>3-14-18</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./3-21-18.html'>Prev</a> ]
+	[ <a href='./3-12-18.html'>Prev</a> ]
 
 	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Paper_topics.html'>Next</a> ]
+	[ <a href='./3-16-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,89 +53,35 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Martins Objections to the Incarnation <a name='Post-Move:Martins Objections to the Incarnation'></a></h1>
+	<h1>3-14-18 <a name='Post-Move:3-14-18'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Friday 16 February 2018
+Created Wednesday 14 March 2018
 </p>
 
 <p>
-<b>Martin's Objectiosn Summarized</b>
-</p>
-
-<p>
-<ol type="A" start="1">
-<li><i>Contradictory Attributes:</i>
+<b>Reading</b>: Atonement by Stump, Chapter 5 (<a href="https://drive.google.com/open?id=1C4ikmJMxh3KuSX2o97uGKrmkiEYDlZjd" title="Drive" class="https">Drive</a>) <br>
 <ol type="1" start="1">
-<li>Attributes of a person's mind(s) are predicated of the person who bears the mind(s).</li>
-<li>On Christian doctrine, in virtue of His divine mind, Christ is omniscient.</li>
-<li>Therefore, the person Christ is both omniscient and not omniscient.</li>
-<li>Nothing can be both F and not-F, where F is some feature of attribute.</li>
-<li>Therefore, Christian doctrine concerning the Incarnation is false.</li>
-</ol>
-</li>
-<li><i>Two Minds:</i>
-<ol type="1" start="1">
-<li>Anything with two minds has two independent centers of rational agency.</li>
-<li>No single person has two independent centers of rational agency.</li>
-<li>Therefore, no single person can have two minds.</li>
-<li>On Christian doctrine, Christ is one person with two minds.</li>
-<li>Therefore, Christian doctrine about Christ is false.</li>
-</ol>
-</li>
-<li><i>Christ's Temptation:</i>
-<ol type="1" start="1">
-<li>S is tempted to sin only if S is attracted to doing something immoral.</li>
-<li>A morally perfect being could not be attracted to doing something immoral.</li>
-<li>On Christian doctrine, Christ is both a morally perfect being and was tempted to sin</li>
-<li>Therefore, Christian doctrine is false.</li>
-</ol>
-</li>
-<li><i>Christ as Model:</i>
-<ol type="1" start="1">
-<li>S is a moral model for human beings only if S at some time is attracted to doing something immoral.</li>
-<li>Christ cannot be attracted to doing anything immoral.</li>
-<li>Therefore, Christ is not a moral model for human beings.</li>
-</ol>
-</li>
-<li><i>Christ's Praiseworthiness:</i>
-<ol type="1" start="1">
-<li>S's lack of attraction to a sinful act is praiseworthy only if S at some time felt an attraction to that sinful act and overcame it by conscious effort.</li>
-<li>Christ never felt attraction to any sinful act.</li>
-<li>Therefore, Christ's lack of attraction to sinful acts is not praiseworthy.</li>
-</ol>
-</li>
-<li><i>Against the Reasonableness of Christian Belief:</i>
-<ol type="1" start="1">
-<li>Christian belief relies on Spirit Epistemology.</li>
-<li>Any belief that relies on Spirit Epistemology is not reasonable.
+<li>Key Question: How do we indwell God?
 <ol type="a" start="1">
-<li>Any belief that relies on Spirit Epistemology has the same epistemic status as the beliefs of followers of Apollonius, who have an Apollonius Epistemology (=those whose impediments have been removed by God can see that Apollonius is God incarnate).</li>
-<li>The beliefs of followers of Apollonius are not reasonable.</li>
-</ol>
-</li>
-<li>Christian belief is not reasonable</li>
-</ol>
-</li>
-<li><i>Evidence for the Incarnation:</i>
+<li>Clue: Cry of Dereliction
+<ol type="a" start="1">
+<li>Interpretation: 
 <ol type="1" start="1">
-<li>Miracles do not rationally support the belief that Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Miracles can be worked by persons who are not the Son of God.</li>
-<li>There is not enough justification to believe that Jesus worked miracles.</li>
+<li>face value -&gt; express distance somehow between Christ and The Father</li>
+<li>Alternative -&gt; beginning of psalm 22 (Stump doesn't like)</li>
 </ol>
 </li>
-<li>Jesus' moral example does not rationally support the belief taht Jesus is the Son of God.
-<ol type="a" start="1">
-<li>Moral perfection is possible for persons other than the Son of God.</li>
-<li>Jesus was not an ideal moral example.</li>
-</ol>
-</li>
-<li>Belief in the Incarnation can be rationally supported only by Jesus' miracles and moral example.</li>
-<li>Therefore, belief in the Incarnation is not rationally supported.</li>
+<li>If we take it at face value, the distance comes from something
+<ol type="1" start="1">
+<li>Claim: On the cross, Christ mind reads every human person in his or her sins, and is overcome by the experience, and loses shared attention with God</li>
 </ol></li>
+</ol></li>
+</ol>
+</li>
+<li>d</li>
 </ol>
 </p>
 
@@ -144,11 +90,6 @@ Created Friday 16 February 2018
 	<br />
 
 	<div class='page-footer'>
-		<b>Backlinks:</b>
-
-		<a href='./2-16-18.html'>Post-Move:2-16-18</a>
-
-		<br /><br />
 
 	</div>
 
